panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_use_typedefd_name_as_parameter_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (typedef a `int`)
         (declaration external (f~2 `fn(a: int) -> int` (static f)) ∅)
         (return
            (call `int` @0
               (addressof `ptr<fn(a: int) -> int>` @8
                  (f~2 `fn(a: int) -> int` (static f)))
               (42 `int` @16)))))
   (function-definition external stack-size=24
      (f~3 `fn(a: int) -> int` (static f))
      (params
         (a~5 `int` @0))
      (compound-statement
         (return (a~5 `int` @0)))))

----- stderr -----
