panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_use_typedefd_name_as_parameter_name_and_use_typedef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name_and_use_typedef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name_and_use_typedef.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (typedef a `int`)
         (declaration external (f~1 `fn(a: int) -> int` (static f)) ∅)
         (definition (b~2 `int` @0) (42 `int` @0))
         (return
            (add `int` @4
               (b~2 `int` @0)
               (call `int` @8
                  (addressof `ptr<fn(a: int) -> int>` @16
                     (f~1 `fn(a: int) -> int` (static f)))
                  (b~2 `int` @0))))))
   (function-definition external stack-size=24
      (f~3 `fn(a: int) -> int` (static f))
      (params
         (a~4 `int` @0))
      (compound-statement
         (return (a~4 `int` @0)))))

----- stderr -----
